# spotspoof-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  question.md  question.yml  security_report.yml
.github/workflows/: publish-crate.yml  release.yml  source-branch-check.yml
config/: db_sha256.txt
data/: most-phished.json  puny-mappings.json
src/: ascii_spoof.rs  db.rs  http.rs  idn.rs  main.rs  types.rs  whois.rs
