[package]
name = "spotspoof-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
url = "2"
idna = "0.5"
once_cell = "1"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zstd = "0.13"
