[package]
name = "spotspoof-cli"
version = "0.2.0-beta"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
url = "2"
idna = "0.5"
once_cell = "1"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zstd = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
utoipa = "4"
utoipa-swagger-ui = { version = "6", features = ["axum"] }
csv = "1"
sha2 = "0.10"
