#....
[package]
name = "spotspoof-cli"
version = "1.0.2"
edition = "2021"
rust-version = "1.83"
authors = ["Rob Page <rob@robertpage.uk>"]
license = "MIT"
description = "Domain spoofing & IDN/Punycode detection for security automation workflows."
repository = "https://github.com/slimpagey/spotspoof-cli"
keywords = ["security", "phishing", "domain", "cli"]
categories = ["command-line-utilities", "security"]
readme = "README.md"

[[bin]]
name = "spotspoof"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
url = "2"
idna = "0.5"
once_cell = "1"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zstd = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
utoipa = "4"
utoipa-swagger-ui = { version = "6", features = ["axum"] }
csv = "1"
sha2 = "0.10"
